# local-recipes

./: .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  build-locally.py  conda_build_config.yaml  environment.yaml  health_report.csv  health_report_test.csv  pixi.toml  test-recipes.py
.ci_support/: build_all.py  linux64.yaml  linux_aarch64.yaml  local_testing_overrides.yaml  requirements.txt
.claude/: settings.json
.claude/docs/: bmad-method-llms-full.txt
.claude/skills/conda-forge-expert/tests/fixtures/manifest_samples/: Dockerfile.multistage  Pipfile  bom.xml  bom_with_rels.json  conda-lock.yml  go.mod  package-lock.json  pnpm-lock.yaml  pyproject.toml  sbom.spdx  sbom.spdx3.json  syft.json  trivy.json  vex_test.json
.claude/skills/conda-forge-expert/tests/fixtures/manifest_samples/helm/: values.yaml
.claude/skills/conda-forge-expert/tests/fixtures/manifest_samples/k8s/: deployment.yaml
.claude/tools/: conda_forge_server.py  gemini_server.py  mcp_call.py
.github/: copilot-instructions.md
.junie/: guidelines.md
.scripts/: build_steps.sh  run_docker_build.sh
_bmad-output/: PROJECTS.md
django-nextjs/: recipe.yaml
docs/: bmad-setup-plan.md  copilot-to-api.md  developer-guide.md  enterprise-deployment.md  mcp-server-architecture.md  pixi-config-jfrog.example.toml
pytest-robotframework/: meta.yaml  recipe.yaml
scripts/: bmad-switch  bmad_drift_check.py  health_report.py  load-env.sh  submit_pr.sh  sync-upstream.sh  sync_pypi_mappings.py
tests/: test_load_env.sh
wagtail/: recipe.yaml
(+2425 files in other folders)
